--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/chrome": "^0.0.60",
     "@types/configstore": "^2.1.1",
     "@types/css-font-loading-module": "^0.0.2",
+    "@types/esprima": "^4.0.2",
     "@types/inquirer": "^0.0.35",
     "@types/intl-messageformat": "^1.3.0",
     "@types/jpeg-js": "^0.3.0",
